--- a/content/blog/index.mdx
+++ b/content/blog/index.mdx
@@ -3,6 +3,7 @@ title: Hello World
 description: Your first document
 author: rajiv
 date: 2025-03-12
+slug: hello-world
 ---
 
 Welcome to the docs! You can start writing documents in `/content/docs`.
