--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -3,6 +3,8 @@ title: Hello World
 description: Your first document
 ---
 
+import { Button } from "../../packages/ui/src/button";
+
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
 ## What is Next?
@@ -11,3 +13,10 @@ Welcome to the docs! You can start writing documents in `/content/docs`.
   <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
   <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
 </Cards>
+
+<Button
+  className="bg-blue-300 p-2 max-w-sm rounded cursor-pointer"
+  appName="oss-app"
+>
+  Test Button
+</Button>
