refactor: rename lots of stuff, add shadcn

--- a/apps/oss-static/app/about/page.mdx
+++ b/apps/oss-static/app/about/page.mdx
@@ -1,5 +1,5 @@
 export { withArticle as default } from 'fumadocs-ui/page';
-import { Button} from "@saas-foundations/ui/button";
+import { Button} from "@workspace/ui/button";
  
 ## Hello World
 
