--- a/workspace/content/docs/index.mdx
+++ b/workspace/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Hello World
 description: Your first document
 ---
 
-import { Button } from "@saas-foundations/ui/button";
+import { Button } from "@workspace/ui/button";
 
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
