--- a/apps/oss-static/app/(marketing)/(mdx)/about/page.mdx
+++ b/apps/oss-static/app/(marketing)/(mdx)/about/page.mdx
@@ -7,7 +7,7 @@ Hey, I'm a **Senior Software Engineer** at Company. I focus on building fast, ac
 
 This portfolio is built with **Next.js** and powered by [Fumadocs](https://fumadocs.vercel.app/), which makes writing pages in Markdown feel like second nature. It lets me focus on content without wrestling with layout.
 
-### Journey
+## Journey
 
 I didn't grow up writing code. In fact, I didn't even know what a `<div>` was until much later. My curiosity started with tweaking themes on forums, editing little bits of CSS without knowing what CSS even meant.
 
@@ -24,7 +24,7 @@ Since then, I've worked across startups and mid-sized teams, shipped production 
 - Instagram [@yourname](https://instagram.com/yourname)
 - Email your@name.com
 
-### Journey 2
+## Journey 2
 
 I didn't grow up writing code. In fact, I didn't even know what a `<div>` was until much later. My curiosity started with tweaking themes on forums, editing little bits of CSS without knowing what CSS even meant.
 
